# poca_market_api

./: .gitignore  README.md  gunicorn.config.py  manage.py  pyproject.toml
common/: exception_handler.py  models.py  pagination.py
order/: exceptions.py  models.py
order/migrations/: 0001_initial.py  0002_alter_order_created_at_alter_order_updated_at_and_more.py  0002_initial.py  0003_alter_payment_method_alter_payment_status.py  0004_alter_usercash_options_alter_payment_method_and_more.py
order/service/: order_service.py
photocard/: apps.py  backup.py  exceptions.py  models.py  serializers.py  tasks.py  urls.py  utils.py  views.py
photocard/migrations/: 0001_initial.py  0002_auto_20240719_1834.py  0002_initial.py  0003_alter_photocard_created_at_and_more.py  0003_auto_20240721_0115.py  0004_alter_photocard_type_alter_photocardsale_status.py
photocard/scripts/: init_photo_card_data.py
photocard/services/: photo_card_sale_purchase_service.py  photo_card_sale_service.py
photocard/tests/: api_tests.py  unit_tests.py
poca_market_api/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
user/: models.py  serializers.py  tasks.py  urls.py
user/migrations/: 0001_initial.py  0002_alter_user_options_alter_user_created_at_and_more.py
user/tests/: user_auth_api_test.py
user/views/: auth_views.py  profile_views.py
